# SerialDevice_Advanced_Example

./: README.md
SerialDevice_Multiple_IO/ESP32_MCU_FW/Multiple_IO_Device/: Multiple_IO_Device.ino
SerialDevice_Multiple_IO/Host_App/: CMakeLists.txt  main.cpp
